--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Suppress compileSdk 36 warning until AGP supports it officially
+android.suppressUnsupportedCompileSdk=36
+# Suppress Java compilation warnings
+android.javaCompile.suppressSourceTargetDeprecationWarning=true
